Added clipboard config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,6 +42,7 @@ bind e new-window -n "#{TMUX_CONF_LOCAL}" sh -c 'case "${EDITOR:-vim}" in *vim*)
 # reload configuration
 bind r run "sh -c '\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:+-S \"\$TMUX_SOCKET\"} source \"\$TMUX_CONF\"'" \; display "#{TMUX_CONF} sourced"
 
+set -s set-clipboard external
 
 # -- display -------------------------------------------------------------------
 
